feat: layout and export

--- a/components/credential-form/credential-form.component.scss
+++ b/components/credential-form/credential-form.component.scss
@@ -1,16 +1,37 @@
 @import "/styles/global.scss";
 
 #credential-form {
-  margin-bottom: 2rem;
+  display: flex;
+  padding: 2rem;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  background: $bg-primary;
+  border-radius: $rounded-xl;
+
+  > h1 {
+    margin: 0;
+    text-align: center;
+    font-size: $text-lg;
+    margin-bottom: 2.4rem;
+  }
 
   > form {
-    display: flex;
-    justify-content: space-between;
+    width: 66%;
 
     > div {
       @extend .form-group;
-      width: calc(33% - 12px);
-      margin-bottom: 0px !important;
+    }
+
+    > button {
+      width: 100%;
+      @extend .btn-primary;
+    }
+  }
+
+  @media only screen and (max-width: 890px) {
+    > form {
+      width: 100%;
     }
   }
 }
