--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,10 +1,12 @@
 //color
-$text: #1c242c;
-$gray: #a5a5a5;
+$white: #fff;
+$text: #ffffff;
+$gray: #5a6770;
 $primary: #d4441c;
 $secondary: #ed254e;
-$bg-primary: #f5f5f5;
-$button-height: 2.2rem;
+$bg-primary: #232b33;
+$input-height: 3.2rem;
+$button-height: 3.2rem;
 
 //font-size
 $text-sm: 0.8rem;
@@ -15,5 +17,6 @@ $text-base: 1rem;
 //radius
 $rounded: 0.25rem;
 $rounded-lg: 0.5rem;
+$rounded-xl: 1.5rem;
 $rounded-sm: 0.125rem;
 $rounded-md: 0.375rem;
