--- a/styles/global.scss
+++ b/styles/global.scss
@@ -6,4 +6,5 @@ body {
   font-size: $text-base;
   background: $bg-primary;
   font-family: "Montserrat", sans-serif;
+  background-image: url("/assets/images/bg.png");
 }
