--- a/styles/custom/_container.scss
+++ b/styles/custom/_container.scss
@@ -6,4 +6,8 @@
   @media (min-width: 1200px) {
     max-width: 1440px;
   }
+
+  @media only screen and (max-width: 890px) {
+    padding: 0 1rem;
+  }
 }
