--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -4,7 +4,7 @@ $text: #ffffff;
 $gray: #5a6770;
 $primary: #d4441c;
 $secondary: #ed254e;
-$bg-primary: #232b33;
+$bg-primary: #1c242c;
 $input-height: 3.2rem;
 $button-height: 3.2rem;
 
