--- a/components/signature-card/signature-card.component.scss
+++ b/components/signature-card/signature-card.component.scss
@@ -17,4 +17,15 @@
   #contact-container {
     padding-right: 8px;
   }
+
+  @media only screen and (max-width: 720px) {
+    display: block;
+    font-size: 65%;
+
+    #image-container {
+      > img {
+        max-width: 40px;
+      }
+    }
+  }
 }
