--- a/components/signature-card/signature-contact/signature-contact.component.scss
+++ b/components/signature-card/signature-contact/signature-contact.component.scss
@@ -23,5 +23,16 @@
         text-underline-position: under;
       }
     }
+
+    @media only screen and (max-width: 720px) {
+      > img {
+        max-width: 40%;
+      }
+
+      > a > img {
+        max-width: 14%;
+        max-height: 18px;
+      }
+    }
   }
 }
